k8s/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-go-jumpserver-http
  namespace: ${K8S_NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ${K8S_NAMESPACE}-redirect-https@kubernetescrd
spec:
  rules:
    - host: hermes-go-jumpserver.steedgrace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermes-go-jumpserver
                port:
                  number: 8080
